Refactoring get_timezone

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ wp-content/debug.log
 wp-content/plugins/prayer-times/.phpunit.result.cache
 wp-content/plugins/digital-signage/*
 wp-content/plugins/spice-starter-sites/*
+wp-content/plugins/plugin-check/*
